支持商品库存，店铺搜索
